Closed
Bug 1639145
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::layers::CompositorBridgeParent::NotifyWebRenderContextPurge]
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla78
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | fixed |
People
(Reporter: achronop, Assigned: sotaro)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-4473119b-807d-4b85-8608-719460200518.
Top 9 frames of crashing thread:
0 libxul.so mozilla::layers::CompositorBridgeParent::NotifyWebRenderContextPurge gfx/layers/ipc/CompositorBridgeParent.cpp:2507
1 libxul.so RunnableFunction<void ipc/chromium/src/base/task.h:324
2 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1211
3 libxul.so mozilla::ipc::MessagePumpForNonMainThreads::Run xpcom/threads/nsThreadUtils.cpp:501
4 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
5 libxul.so nsThread::ThreadFunc xpcom/threads/nsThread.cpp:444
6 libnspr4.so _pt_root nsprpub/pr/src/pthreads/ptthread.c:201
7 libpthread.so.0 start_thread
8 libc.so.6 __GI___clone
This started crashing close after the land of Bug 1575008.
Comment 1•6 years ago
|
||
Hmm, doesn't look obviously related. Would be great to know what "about:support" looks like on that machine.
Severity: -- → S3
Priority: -- → P3
Comment 2•6 years ago
|
||
Moving as it doesn't appear to be related to WebGPU, looking by the code (thanks to JeffM).
Component: Graphics: WebGPU → Graphics: WebRender
| Assignee | ||
Comment 3•6 years ago
•
|
||
It seems that nullptr access happened there. mWrBridge is cleared during closing a window.
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 4•6 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9a840b47f67a
Add nullptr check to CompositorBridgeParent::NotifyWebRenderContextPurge() r=jrmuizel
Comment 6•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox78:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Updated•6 years ago
|
status-firefox76:
--- → unaffected
status-firefox77:
--- → unaffected
status-firefox-esr68:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•