Bug 1639145 - Add nullptr check to CompositorBridgeParent::NotifyWebRenderContextPurge() r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D76074